fix(style): Make visible the header H4
I added the H4 header because it was used for the usage examples
of the arithmetic mean article.
https://www.wikilear.it/google-sheets/tutorial/fogli-google-calcolare-il-valore-medio-numerico-in-un-insieme-di-dati/#example-di-uso-2

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -292,6 +292,7 @@
   /* https://twitter.com/JoshWComeau/status/1332015868725891076?s=20 */
   h2,
   h3,
+  h4,
   .heading {
     scroll-margin-top: 72px;
     scroll-snap-margin-top: 72px;
